Try fixing the circle clipping.

--- a/assets/base.css
+++ b/assets/base.css
@@ -3142,7 +3142,7 @@ details-disclosure > details {
 }
 
 .shape--circle {
-  clip-path: circle(40%);
+  clip-path: circle(closest-side);
 }
 
 .shape--diamond {
